--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Building a MERN bug tracking app",
   "main": "webapp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node webapp.js",
+    "dev": "nodemon webapp.js",
+    "debug": "nodemon --debug webapp.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
   },
   "homepage": "https://github.com/jjmax75/mern-bugtracker#readme",
   "dependencies": {
+    "babel-preset-react": "6.5.0",
     "express": "4.13.4"
   }
 }
