--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "babel-preset-react": "6.5.0",
     "body-parser": "1.15.0",
     "express": "4.13.4",
-    "mongodb": "2.1.13"
+    "jquery": "2.2.2",
+    "mongodb": "2.1.13",
+    "react": "0.14.8",
+    "react-dom": "0.14.8"
   }
 }
