--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jquery": "2.2.2",
     "mongodb": "2.1.13",
     "react": "0.14.8",
-    "react-dom": "0.14.8"
+    "react-dom": "0.14.8",
+    "react-router": "2.0.1"
   },
   "devDependencies": {
     "babelify": "7.2.0",
