--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "2.2.2",
     "mongodb": "2.1.13",
     "react": "0.14.8",
+    "react-bootstrap": "0.29.2",
     "react-dom": "0.14.8",
     "react-router": "2.0.1"
   },
